<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="10"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:gravity="center"
    android:backgroundTint="@color/blekit"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/wybierz_kategorie_rzeczy_do_spakowania"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <Button
            android:id="@+id/ubrania"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:backgroundTint="@color/pomaranczowy"
            android:text="@string/ubrania"
            android:onClick="Button_Ubrania"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/elektronika"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:backgroundTint="@color/pomaranczowy"
            android:text="@string/elektronika"
            android:onClick="Button_Elektronika"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/kosmetyki"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:backgroundTint="@color/pomaranczowy"
            android:text="@string/kosmetyki"
            android:onClick="Button_Kosmetyki"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/wazne_dokumenty"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:backgroundTint="@color/pomaranczowy"
            android:text="@string/wazne_dokumenty"
            android:onClick="Button_Wazne_dok"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/apteczka"
            android:layout_width="270dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:backgroundTint="@color/pomaranczowy"
            android:text="@string/apteczka"
            android:onClick="Button_Apteczka"
            app:cornerRadius="30dp" />

        <TextView
            android:id="@+id/bagaz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:text="Kliknij w bagaż aby zobaczyć wybrane przedmioty"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/myImageView"
            android:layout_width="66dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:onClick="onImageClick"
            android:src="@drawable/walizkaa" />

        <TextView
            android:id="@+id/zalogowany_jako"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:text="Zalogowany jako:"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0"
            android:text=""
            android:textColor="@color/white" />



        <Button
            android:id="@+id/logout"
            android:text="@string/wyloguj_si"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:backgroundTint="@color/pomaranczowy"/>


    </LinearLayout>

</LinearLayout>
