<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logos"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Register"
    android:layout_weight="20"
    >

    <TextView
        android:id="@+id/pustka"
        android:layout_width="242dp"
        android:layout_height="439dp"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/obramowka"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:background="@drawable/obramowka">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/obramowka"
            android:hint="@string/password" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/btn_register"
        android:layout_width="117dp"
        android:layout_height="60dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/pomaranczowy"
        android:text="@string/register"
        android:textColor="@color/white"
        app:cornerRadius="20dp" />


    <TextView
        android:id="@+id/loginNow"
        android:layout_width="242dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/pomaranczowy"
        android:gravity="center_horizontal"
        android:text="@string/kliknij_aby_sie_zalogowa"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>