<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/blekit"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LogowanieActivity"
    android:layout_weight="20">

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="517dp"
        android:layout_weight="10"
        android:background="#6DCFFD"
        android:backgroundTint="#6DCFFD"
        app:srcCompat="@drawable/logos" />

    <EditText
        android:id="@+id/username"
        android:layout_width="193dp"
        android:layout_height="50dp"
        android:background="@drawable/obramowka"
        android:drawablePadding="8dp"
        android:hint="@string/nazwa_uzytkownika"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        app:cornerRadius="40dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="193dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/obramowka"
        android:drawablePadding="8dp"
        android:hint="@string/haslo"
        android:padding="8dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        app:cornerRadius="40dp"/>

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="62dp"
        android:layout_height="60dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/pomaranczowy"
        android:textColor="@color/white"
        android:text="@string/go"
        app:cornerRadius="20dp" />


</LinearLayout>